--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "underscore": "x.x",
     "async": "x.x",
-    "ejs": "^1.0.0",
-    "gm": "^1.16.0",
-    "imageinfo": "^1.0.4",
-    "markdown": "^0.5.0",
-    "image-optim": "^0.1.0",
-    "ncp": "^0.5.1",
-    "minimist": "^0.1.0"
+    "ejs": "x.x",
+    "gm": "x.x",
+    "imageinfo": "x.x",
+    "markdown": "x.x",
+    "image-optim": "x.x",
+    "ncp": "x.x",
+    "yargs": "x.x"
   },
   "author": {
     "name": "Philipp Waldhauer",
